# NASA

./: .env.example  Makefile  README.md  manage.py  pyproject.toml  req.pip
locale/ru/LC_MESSAGES/: django.mo  django.po
nasa/: asgi.py  settings.py  urls.py  views.py  wsgi.py
nasa/slider/: admin.py  apps.py  models.py
nasa/slider/migrations/: 0001_initial.py  0002_alter_slide_options_alter_slide_image_and_more.py
nasa/templates/: advantages.html  main.html  navbar.html  slider.html
static/css/: styles_desktop.css  styles_mobail.css
static/js/: menu.js
staticfiles/: staticfiles.json
staticfiles/css/: styles_desktop.13103b65b693.css  styles_mobail.27e1492a4407.css  styles_mobail.34493bd50063.css  styles_mobail.7c8793346354.css
staticfiles/js/: scroll_to_top.f3a694094d2c.js  slider.js
