[tool.poetry]
name = "nasa"
version = "0.1.0"
description = "Тестовое задание"
authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
readme = "README.md"
packages = [{include = "nasa"}]

[tool.poetry.dependencies]
python = "3.9.7"
django = "4.1.*"
mysqlclient = "*"
django-filer = "^3.1.1"
django-admin-sortable2 = "^2.1.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
